--- a/light/index.html
+++ b/light/index.html
@@ -468,7 +468,7 @@
                 <div class="row text-center">
                     <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
                         <h2 data-wow-delay="0.3s" class="wow rollIn animated"><strong>HOW YOU CAN HELP ?</strong></h2>
-                        <p class="sub-head">Checkout this vedio , which will let you know how you can help us to save the earth and let the earth live long peacefully. </p>
+                        <p class="sub-head">Checkout this video , which will let you know how you can help us to save the earth and let the earth live long peacefully. </p>
                     </div>
                 </div>
                 <div class="row ">
