--- a/light/index.html
+++ b/light/index.html
@@ -151,123 +151,10 @@
                     <h2  data-wow-delay="0.3s" class="wow rollIn animated" ><strong>MAP </strong></h2>
                     <p class="sub-head">This interactive map depicts Ebola virus cases since the year 2000 on the African continent. </p>
                 </div>
-            </div>
-            <div class="row ">
-                <div class="col-lg-4 col-md-4">
-                    <div class="media wow rotateIn animated" data-wow-delay="0.2s">
-                        <div class="pull-left">
-                            <i class="fa fa-recycle fa-4x  "></i>
-                        </div>
-                        <div class="media-body">
-                            <h3 class="media-heading">We Promote Recycling</h3>
-                            <p >
-                                Aenean faucibus luctus enim. Duis quis sem risu suspend lacinia elementum nunc.
-                                Aenean faucibus luctus enim.
-                            </p>
-
-                        </div>
-                    </div>
-                    <div class="media wow rotateIn animated" data-wow-delay="0.3s">
-                        <div class="pull-left">
-                            <i class="fa fa-history fa-4x  "></i>
-                        </div>
-                        <div class="media-body">
-                            <h3 class="media-heading">Eco-Friendly Techniques</h3>
-                            <p>
-                                Aenean faucibus luctus enim. Duis quis sem risu suspend lacinia elementum nunc.
-                                Aenean faucibus luctus enim.
-                            </p>
-
-                        </div>
-                    </div>
-
-                </div>
-                <div class="col-lg-4 col-md-4 wow bounceInDown animated" style="padding: 10px;" data-wow-delay="0.6s"   >
-                    <div id="carousel-slider" class="carousel slide" data-ride="carousel">
-
-                        <div class="carousel-inner">
-                            <div class="item">
-
-                                <img src="assets/img/slider/1.jpg" class="img-thumbnail" alt="">
-                            </div>
-                            <div class="item">
-                                <img src="assets/img/slider/2.png" class="img-thumbnail" alt="">
-                            </div>
-                            <div class="item active">
-                                <img src="assets/img/slider/3.jpg" class="img-thumbnail" alt="">
-                            </div>
-                        </div>
-                        <!--INDICATORS-->
-                        <ol class="carousel-indicators">
-                            <li data-target="#carousel-slider" data-slide-to="0" class=""></li>
-                            <li data-target="#carousel-slider" data-slide-to="1" class=""></li>
-                            <li data-target="#carousel-slider" data-slide-to="2" class="active"></li>
-                        </ol>
-
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-4">
-
-                    <div class="media wow rotateIn animated" data-wow-delay="0.4s">
-                        <div class="pull-left">
-                            <i class="fa fa-star-o fa-4x  "></i>
-                        </div>
-                        <div class="media-body">
-                            <h3 class="media-heading">Waste Reduction</h3>
-                            <p>
-                                Aenean faucibus luctus enim. Duis quis sem risu suspend lacinia elementum nunc.
-                                Aenean faucibus luctus enim.
-                            </p>
-
-                        </div>
-                    </div>
-                    <div class="media wow rotateIn animated" data-wow-delay="0.5s">
-                        <div class="pull-left">
-                            <i class="fa fa-life-ring fa-4x  "></i>
-                        </div>
-                        <div class="media-body">
-                            <h3 class="media-heading">Resource Utilization</h3>
-                            <p>
-                                Aenean faucibus luctus enim. Duis quis sem risu suspend lacinia elementum nunc.
-                                Aenean faucibus luctus enim.
-                            </p>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row pad-top-botm wow flipInX animated" data-wow-delay="0.7s">
-                <div class="col-lg-8 col-md-8 col-sm-8 " >
-
-                    <h3><strong>What is our profile ?</strong></h3>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-
-                    </p>
-                </div>
-
-                <div class="col-lg-4 col-md-4 col-sm-4 text-center" >
-                    <i class="fa fa-lightbulb-o big-icon "></i>
-
-
-                </div>
-
+                <div class="col-lg-8 col-md-8 col-sm-8" style="padding: 10px;" data-wow-delay="0.6s"   >
+                  <div class="pull-center">
+                    <iframe src="http://jsfiddle.net/smailhodzic/5hohw04L/71/embedded/result/" width="1000" height="720" scrolling="no"></iframe>
+                  </div>
             </div>
         </div>
     </div>
@@ -468,39 +355,38 @@
                 <div class="row text-center">
                     <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
                         <h2 data-wow-delay="0.3s" class="wow rollIn animated"><strong>HOW YOU CAN HELP ?</strong></h2>
-                        <p class="sub-head">Checkout this vedio , which will let you know how you can help us to save the earth and let the earth live long peacefully. </p>
+                        <p class="sub-head">Visit the following website to see how you can help in the fight against Ebola. </p>
                     </div>
                 </div>
                 <div class="row ">
 
                     <div class="col-lg-6 col-lg-offset-1  col-md-6 col-md-offset-1">
-                        <iframe src="http://player.vimeo.com/video/18312392" class="vedio-style wow rotateIn animated" data-wow-delay="0.4s"></iframe>
+                        <iframe src="http://www.ussltaskforce.org/" class="vedio-style wow rotateIn animated" data-wow-delay="0.4s"></iframe>
                     </div>
 
                     <div class="col-lg-4 col-md-4" style="padding-top: 50px;">
 
-                        <div class="media wow rotateIn animated" data-wow-delay="0.5s">
+                        <div class="media wow rotateIn animated" data-wow-delay="0.3s">
                             <div class="pull-left">
                                 <i class="fa fa-star-o fa-4x  "></i>
                             </div>
                             <div class="media-body">
-                                <h3 class="media-heading">Watch This Vedio</h3>
+                                <h3 class="media-heading">Visit the Link</h3>
                                 <p>
-                                    Aenean faucibus luctus enim. Duis quis sem risu suspend lacinia elementum nunc.
-                                Aenean faucibus luctus enim.
+                                    Learn how you can help.
                                 </p>
 
                             </div>
                         </div>
-                        <div class="media wow rotateIn animated" data-wow-delay="0.6s">
+                        <div class="media wow rotateIn animated" data-wow-delay="0.3s">
                             <div class="pull-left">
                                 <i class="fa fa-history fa-4x  "></i>
                             </div>
                             <div class="media-body">
-                                <h3 class="media-heading">Donate Some Money </h3>
+                                <h3 class="media-heading">Donate Supplies </h3>
                                 <p>
-                                    Aenean faucibus luctus enim. Duis quis sem risu suspend lacinia elementum nunc.
-                                Aenean faucibus luctus enim.
+                                    The link will inform you on the supplies needed to combat Ebola,
+                                    and where to send the supplies you have collected.
                                 </p>
 
                             </div>
