--- a/light/index.html
+++ b/light/index.html
@@ -8,7 +8,7 @@
     <!--[if IE]>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <![endif]-->
-    <title>ECOSAVE BOOTSTRAP ENVIRONMENT TEMPLATE</title>
+    <title>EBOLA BOOTSTRAP TEMPLATE</title>
     <!--  Bootstrap Style -->
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
     <!--  Font-Awesome Style -->
@@ -91,69 +91,39 @@
             <div class="container">
                 <div class="row ">
                     <div class="col-lg-9 col-md-9 head-text">
-                        <h1 id="divDisp" >WHY WE NEED DONATIONS ?</h1>
+                        <h1 id="divDisp" >WHY WE NEED YOUR HELP</h1>
                         <span >
-                            <i class="fa fa-lightbulb-o " ></i>For Planting new plants
+                            <i class="fa fa-lightbulb-o " ></i>
                         </span>
                         <span>
-                            <i class="fa fa-lightbulb-o" ></i>For Promoting Eco Education in Schools
+                            <i class="fa fa-lightbulb-o" ></i>
                         </span>
 
                         <span >
-                            <i class="fa fa-lightbulb-o" ></i>Encouraging Eco Friendly Methods
+                            <i class="fa fa-lightbulb-o" ></i>
                         </span>
                         <span >
-                            <i class="fa fa-lightbulb-o" ></i>Recycling Waste and garbage
+                            <i class="fa fa-lightbulb-o" ></i>
                         </span>
                         <span >
-                            <i class="fa fa-lightbulb-o" ></i>For Maintaing ecological balance
+                            <i class="fa fa-lightbulb-o" ></i>
                         </span>
                         <span >
-                            <i class="fa fa-lightbulb-o" ></i>To Research new eco friendly techniques
+                            <i class="fa fa-lightbulb-o" ></i>
                         </span>
-                    </div>
-                    <div class="col-lg-3 col-md-3">
-                        <div class="div-trans text-center">
-                            <h3>DONATE & SAVE </h3>
-                            <h2 ><i class="fa fa-code" ></i><span >EARTH</span>  <i class="fa fa-code"></i></h2>
-                            <div class="col-lg-12 col-md-12 col-sm-12" >
-
-
-                                <div class="form-group">
-                                    <input type="text" class="form-control" required="required" placeholder="Name">
-                                </div>
-                                <div class="form-group">
-                                    <input type="text" class="form-control" required="required" placeholder="Email address">
-                                </div>
-                                <div class="form-group">
-                                    <input type="text" class="form-control" required="required" placeholder="Amount in $">
-                                </div>
-                                <div class="form-group">
-                                    <button type="submit" class="btn btn-success btn-block btn-lg">DONATE NOW</button>
-                                </div>
-                             </div>
-
-                        </div>
                     </div>
                 </div>
-
             </div>
-
         </div>
-
-
     </div>
     <!--./ HOME SECTION END -->
     <div id="map" >
         <div class="container">
             <div class="row text-center">
-                <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 sub-head">
                     <h2  data-wow-delay="0.3s" class="wow rollIn animated" ><strong>MAP </strong></h2>
                     <p class="sub-head">This interactive map depicts Ebola virus cases since the year 2000 on the African continent. </p>
                 </div>
-                <div class="col-lg-8 col-md-8 col-sm-8" style="padding: 10px;" data-wow-delay="0.6s"   >
-                  <div class="pull-center">
-                    <iframe src="http://jsfiddle.net/smailhodzic/5hohw04L/71/embedded/result/" width="1000" height="720" scrolling="no"></iframe>
+                  <iframe align="center" width="100%" height="720" src="/light/assets/frame/interactivemap.html" allowfullscreen="allowfullscreen" frameborder="0" scrolling="no"></iframe>
                   </div>
             </div>
         </div>
@@ -218,8 +188,7 @@
     <div id="predictions" class="pad-top-botm" >
         <div class="container">
             <div class="row text-center ">
-                <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
-                    <h2 data-wow-delay="0.3s" class="wow rollIn animated"><strong>PREDICTIONS </strong></h2>
+                    <h2 data-wow-delay="0s" class="wow rollIn animated"><strong>PREDICTIONS </strong></h2>
                     <p class="sub-head">The following graphs represent predictions for the spreading of the virus within the West African countries affected. These predictions were calculated using the SIR Model of Disease spreading, which was adapted to use information mined from Twitter. </p>
 
                 </div>
@@ -353,58 +322,21 @@
         <div class="overlay">
             <div class="container">
                 <div class="row text-center">
-                    <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
                         <h2 data-wow-delay="0.3s" class="wow rollIn animated"><strong>HOW YOU CAN HELP ?</strong></h2>
                         <p class="sub-head">Visit the following website to see how you can help in the fight against Ebola. </p>
                     </div>
                 </div>
-                <div class="row ">
-
-                    <div class="col-lg-6 col-lg-offset-1  col-md-6 col-md-offset-1">
-                        <iframe src="http://www.ussltaskforce.org/" class="vedio-style wow rotateIn animated" data-wow-delay="0.4s"></iframe>
-                    </div>
-
-                    <div class="col-lg-4 col-md-4" style="padding-top: 50px;">
-
-                        <div class="media wow rotateIn animated" data-wow-delay="0.3s">
-                            <div class="pull-left">
-                                <i class="fa fa-star-o fa-4x  "></i>
-                            </div>
-                            <div class="media-body">
-                                <h3 class="media-heading">Visit the Link</h3>
-                                <p>
-                                    Learn how you can help.
-                                </p>
-
-                            </div>
-                        </div>
-                        <div class="media wow rotateIn animated" data-wow-delay="0.3s">
-                            <div class="pull-left">
-                                <i class="fa fa-history fa-4x  "></i>
-                            </div>
-                            <div class="media-body">
-                                <h3 class="media-heading">Donate Supplies </h3>
-                                <p>
-                                    The link will inform you on the supplies needed to combat Ebola,
-                                    and where to send the supplies you have collected.
-                                </p>
-
-                            </div>
-                        </div>
-
+                <div class="row text-center">
+                      <a href="http://www.ussltaskforce.org/">US-SL Ebola Health Care Task Force Coalition</a>
                     </div>
                 </div>
-
-
             </div>
         </div>
-
     </div>
     <!--./ HELP SECTION END -->
     <div id="zmapp" >
         <div class="container">
             <div class="row text-center">
-                <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
                     <h2 data-wow-delay="0.3s" class="wow rollIn animated"><strong>ZMAPP </strong></h2>
                     <p class="sub-head">ZMapp is an experimental drug developed by Mapp Biopharmaceutical.
 
@@ -415,36 +347,9 @@
                       Production of the drug takes several weeks and only produces a small amount.
 
                       Current side effects of the drug include chest tightness and increased heart rate. More side effects will become known with continuous observations. </p>
+                      <img src="http://media.kentucky.com/smedia/2014/08/10/06/35/EQQW5.AuSt.79.jpg" alt="The process to produce ZMapp">
                 </div>
             </div>
-            <div class="row  text-center wow rotateIn animated" data-wow-delay="0.4s">
-                <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
-                    <a href="#">  <img src="assets/img/Social/facebook.png" alt="" /> </a>
-                     <a href="#"> <img src="assets/img/Social/google-plus.png" alt="" /></a>
-                     <a href="#"> <img src="assets/img/Social/twitter.png" alt="" /></a>
-                    </div>
-                </div>
-            <div class="row pad-top-botm">
-                <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
-                    <form>
-                        <div class="form-group">
-                            <input type="text" class="form-control wow rotateIn animated" data-wow-delay="0.5s" required="required" placeholder="Your Name">
-                        </div>
-                        <div class="form-group">
-                            <input type="text" class="form-control wow rotateIn animated" required="required" data-wow-delay="0.6s" placeholder="Your Email">
-                        </div>
-                        <div class="form-group">
-                            <textarea name="message"  required="required" data-wow-delay="0.7s" class="wow rotateIn animated form-control" style="min-height: 150px;" placeholder="Message"></textarea>
-                        </div>
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-success btn-block btn-lg wow rotateIn animated " data-wow-delay="0.8s">SUBMIT REQUEST</button>
-                        </div>
-
-                    </form>
-                </div>
-
-            </div>
-
         </div>
     </div>
     <!--./ ZMAPP SECTION END -->
