--- a/light/index.html
+++ b/light/index.html
@@ -90,26 +90,26 @@
         <div class="overlay">
             <div class="container">
                 <div class="row ">
-                    <div class="col-lg-9 col-md-9 head-text">
+                    <div class="col-lg-12 col-md-12 head-text">
                         <h1 id="divDisp" >WHY WE NEED YOUR HELP</h1>
                         <span >
-                            <i class="fa fa-lightbulb-o " ></i>
+                            <i class="fa fa-lightbulb-o " ></i>There are 22.3 million people living in areas where Ebola transmission has occurred
                         </span>
                         <span>
-                            <i class="fa fa-lightbulb-o" ></i>
+                            <i class="fa fa-lightbulb-o" ></i>Women make up an estimated 75% of all cases
                         </span>
 
                         <span >
-                            <i class="fa fa-lightbulb-o" ></i>
+                            <i class="fa fa-lightbulb-o" ></i>Children are particularly vulnerable to Ebola
                         </span>
                         <span >
-                            <i class="fa fa-lightbulb-o" ></i>
+                            <i class="fa fa-lightbulb-o" ></i>3,700 children who have lost one or more of their parents to Ebola since the start of the crisis
                         </span>
                         <span >
-                            <i class="fa fa-lightbulb-o" ></i>
+                            <i class="fa fa-lightbulb-o" ></i>10.3 million children and adolescents under age 18 are directly or indirectly affected
                         </span>
                         <span >
-                            <i class="fa fa-lightbulb-o" ></i>
+                            <i class="fa fa-lightbulb-o" ></i>Current outbreak is worst in documented history
                         </span>
                     </div>
                 </div>
@@ -122,9 +122,7 @@
             <div class="row text-center">
                     <h2  data-wow-delay="0.3s" class="wow rollIn animated" ><strong>MAP </strong></h2>
                     <p class="sub-head">This interactive map depicts Ebola virus cases since the year 2000 on the African continent. </p>
-                </div>
-                  <iframe align="center" width="100%" height="720" src="/light/assets/frame/interactivemap.html" allowfullscreen="allowfullscreen" frameborder="0" scrolling="no"></iframe>
-                  </div>
+                    <iframe align="center" width="960" height="680" src="/light/assets/frame/interactivemap.html" allowfullscreen="allowfullscreen" frameborder="0" scrolling="no"></iframe>
             </div>
         </div>
     </div>
