--- a/light/index.html
+++ b/light/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="Turning The Ebola Project phone application into a web app" />
+    <meta name="author" content="Armin Smailhodzic and Jason Smith" />
     <!--[if IE]>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <![endif]-->
@@ -89,9 +89,13 @@
     <div id="home" >
         <div class="overlay">
             <div class="container">
-                <div class="row ">
+                <div class="row text-center ">
                     <div class="col-lg-12 col-md-12 head-text">
                         <h1 id="divDisp" >WHY WE NEED YOUR HELP</h1>
+                        <p>
+                        <iframe align="center" width="560" height="315" src="//www.youtube.com/embed/JNiH18JNmqA" frameborder="0"></iframe>
+                        <p>
+                          <center>
                         <span >
                             <i class="fa fa-lightbulb-o " ></i>There are 22.3 million people living in areas where Ebola transmission has occurred
                         </span>
@@ -111,6 +115,7 @@
                         <span >
                             <i class="fa fa-lightbulb-o" ></i>Current outbreak is worst in documented history
                         </span>
+                        <center>
                     </div>
                 </div>
             </div>
@@ -127,62 +132,6 @@
         </div>
     </div>
     <!--./ MAP SECTION END -->
-    <div class="donars-section">
-        <div class="overlay">
-            <div class="container">
-                <div class="row ">
-                    <div class="col-lg-12 col-md-12 ">
-                        <div id="testimonials" class="carousel slide" data-ride="carousel">
-
-                            <ol class="carousel-indicators">
-                                <li data-target="#testimonials" data-slide-to="0" class=""></li>
-                                <li data-target="#testimonials" data-slide-to="1" class=""></li>
-                                <li data-target="#testimonials" data-slide-to="2" class="active"></li>
-                            </ol>
-
-                            <div class="carousel-inner">
-                                <div class="item">
-                                    <div class="container center">
-                                        <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 slide-custom">
-
-                                            <h4><i class="fa fa-quote-left"></i>Lorem ipsum dolor sit amet, consectetur adipiscing elit onec molestie non sem vel condimentum. <i class="fa fa-quote-right"></i></h4>
-                                            <div class="user-img pull-right">
-                                                <img src="assets/img/user2.png" alt="" class="img-circle image-responsive">
-                                            </div>
-                                            <h5 class="pull-right"><strong class="c-black">Lorem Dolor</strong></h5>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="item">
-                                    <div class="container center">
-                                        <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 slide-custom">
-                                            <h4><i class="fa fa-quote-left"></i>Aenean faucibus luctus enim. Duis quis sem risu suspend lacinia elementum nunc. <i class="fa fa-quote-right"></i></h4>
-                                            <div class="user-img pull-right">
-                                                <img src="assets/img/user.gif" alt="" class="img-circle image-responsive">
-                                            </div>
-                                            <h5 class="pull-right"><strong class="c-black">Faucibus luctus</strong></h5>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="item active">
-                                    <div class="container center">
-                                        <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 slide-custom">
-                                            <h4><i class="fa fa-quote-left"></i>Sed ultricies, libero ut adipiscing fringilla, ante elit luctus lorem, a egestas dui metus a arcu condimentum. <i class="fa fa-quote-right"></i></h4>
-                                            <div class="user-img pull-right">
-                                                <img src="assets/img/user2.png" alt="" class="img-circle image-responsive">
-                                            </div>
-                                            <h5 class="pull-right"><strong class="c-black">Sed ultricies</strong></h5>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--./ DONARS TESTIMONIALS END -->
     <div id="predictions" class="pad-top-botm" >
         <div class="container">
             <div class="row text-center ">
@@ -321,11 +270,10 @@
             <div class="container">
                 <div class="row text-center">
                         <h2 data-wow-delay="0.3s" class="wow rollIn animated"><strong>HOW YOU CAN HELP ?</strong></h2>
-                        <p class="sub-head">Visit the following website to see how you can help in the fight against Ebola. </p>
-                    </div>
-                </div>
-                <div class="row text-center">
-                      <a href="http://www.ussltaskforce.org/">US-SL Ebola Health Care Task Force Coalition</a>
+                      </i>Visit the following website to see how you can help in the fight against Ebola. </p>
+                        <p>
+                        <p>
+                        <a href="http://www.ussltaskforce.org/">US-SL Ebola Health Care Task Force Coalition</a>
                     </div>
                 </div>
             </div>
