changed the lightbulbs to quotations

--- a/light/index.html
+++ b/light/index.html
@@ -97,23 +97,23 @@
                         <p>
                           <center>
                         <span >
-                            <i class="fa fa-lightbulb-o " ></i>There are 22.3 million people living in areas where Ebola transmission has occurred
+                          <i class="fa fa-quote-left" ></i>There are 22.3 million people living in areas where Ebola transmission has occurred <i class="fa fa-quote-right" >
                         </span>
                         <span>
-                            <i class="fa fa-lightbulb-o" ></i>Women make up an estimated 75% of all cases
+                          <i class="fa fa-quote-left" ></i>Women make up an estimated 75% of all cases <i class="fa fa-quote-right" >
                         </span>
 
                         <span >
-                            <i class="fa fa-lightbulb-o" ></i>Children are particularly vulnerable to Ebola
+                          <i class="fa fa-quote-left" ></i>Children are particularly vulnerable to Ebola <i class="fa fa-quote-right" >
                         </span>
                         <span >
-                            <i class="fa fa-lightbulb-o" ></i>3,700 children who have lost one or more of their parents to Ebola since the start of the crisis
+                          <i class="fa fa-quote-left" ></i>3,700 children who have lost one or more of their parents to Ebola since the start of the crisis <i class="fa fa-quote-right" >
                         </span>
                         <span >
-                            <i class="fa fa-lightbulb-o" ></i>10.3 million children and adolescents under age 18 are directly or indirectly affected
+                          <i class="fa fa-quote-left" ></i>10.3 million children and adolescents under age 18 are directly or indirectly affected <i class="fa fa-quote-right" >
                         </span>
                         <span >
-                            <i class="fa fa-lightbulb-o" ></i>Current outbreak is worst in documented history
+                          <i class="fa fa-quote-left" ></i>Current outbreak is worst in documented history <i class="fa fa-quote-right" >
                         </span>
                         <center>
                     </div>
@@ -134,7 +134,7 @@
     <!--./ MAP SECTION END -->
     <div id="predictions" class="pad-top-botm" >
         <div class="container">
-            <div class="row text-center ">
+            <div class="row text-center">
                     <h2 data-wow-delay="0s" class="wow rollIn animated"><strong>PREDICTIONS </strong></h2>
                     <p class="sub-head">The following graphs represent predictions for the spreading of the virus within the West African countries affected. These predictions were calculated using the SIR Model of Disease spreading, which was adapted to use information mined from Twitter. </p>
 
