--- a/light/index.html
+++ b/light/index.html
@@ -96,26 +96,26 @@
                         <iframe align="center" width="560" height="315" src="//www.youtube.com/embed/JNiH18JNmqA" frameborder="0"></iframe>
                         <p>
                           <center>
-                        <span >
-                          <i class="fa fa-quote-left" ></i>There are 22.3 million people living in areas where Ebola transmission has occurred <i class="fa fa-quote-right" >
+                        <span>
+                          <i class="fa fa-quote-left" ></i>There are 22.3 million people living in areas where Ebola transmission has occurred <i class="fa fa-quote-right" ></i>
                         </span>
                         <span>
-                          <i class="fa fa-quote-left" ></i>Women make up an estimated 75% of all cases <i class="fa fa-quote-right" >
+                          <i class="fa fa-quote-left" ></i>Women make up an estimated 75% of all cases <i class="fa fa-quote-right" ></i>
                         </span>
 
                         <span >
-                          <i class="fa fa-quote-left" ></i>Children are particularly vulnerable to Ebola <i class="fa fa-quote-right" >
+                          <i class="fa fa-quote-left" ></i>Children are particularly vulnerable to Ebola <i class="fa fa-quote-right" ></i>
                         </span>
                         <span >
-                          <i class="fa fa-quote-left" ></i>3,700 children who have lost one or more of their parents to Ebola since the start of the crisis <i class="fa fa-quote-right" >
+                          <i class="fa fa-quote-left" ></i>3,700 children who have lost one or more of their parents to Ebola since the start of the crisis <i class="fa fa-quote-right" ></i>
                         </span>
                         <span >
-                          <i class="fa fa-quote-left" ></i>10.3 million children and adolescents under age 18 are directly or indirectly affected <i class="fa fa-quote-right" >
+                          <i class="fa fa-quote-left" ></i>10.3 million children and adolescents under age 18 are directly or indirectly affected <i class="fa fa-quote-right" ></i>
                         </span>
                         <span >
-                          <i class="fa fa-quote-left" ></i>Current outbreak is worst in documented history <i class="fa fa-quote-right" >
+                          <i class="fa fa-quote-left" ></i>Current outbreak is worst in documented history <i class="fa fa-quote-right" ></i>
                         </span>
-                        <center>
+                      </center>
                     </div>
                 </div>
             </div>
