replaced existing image

--- a/light/index.html
+++ b/light/index.html
@@ -146,7 +146,7 @@
                     <div class="portfolio-item wow rotateIn animated" data-wow-delay="0.4s">
 
 
-                        <img src="assets/img/portfolio/g.jpg" class="img-responsive " alt="" />
+                        <img src="assets/img/Liberia.png" class="img-responsive " alt="" />
                         <div class="overlay">
                             <p>
                                 <span>
@@ -155,7 +155,7 @@
 
                                 PROJECT TITLE HERE
                             </p>
-                            <a class="preview  " title="Image Title Here" href="assets/img/portfolio/g.jpg"><i class="fa fa-search-plus fa-5x"></i></a>
+                            <a class="preview  " title="Image Title Here" href="assets/img/Liberia.png"><i class="fa fa-search-plus fa-5x"></i></a>
 
                         </div>
                     </div>
