changed the top 3 pictures in the predictions section

--- a/light/index.html
+++ b/light/index.html
@@ -155,7 +155,7 @@
 
                                 PROJECT TITLE HERE
                             </p>
-                            <a class="preview  " title="Image Title Here" href="assets/img/Liberia.png"><i class="fa fa-search-plus fa-5x"></i></a>
+                            <a class="preview  " title="Liberia Case Predictions" href="assets/img/Liberia.png"><i class="fa fa-search-plus fa-5x"></i></a>
 
                         </div>
                     </div>
@@ -165,7 +165,7 @@
                     <div class="portfolio-item wow rotateIn animated" data-wow-delay="0.5s">
 
 
-                        <img src="assets/img/portfolio/b.jpg" class="img-responsive " alt="" />
+                        <img src="assets/img/Guinea.png" class="img-responsive " alt="" />
                         <div class="overlay">
                             <p>
                                 <span>
@@ -174,7 +174,7 @@
 
                                 PROJECT TITLE HERE
                             </p>
-                            <a class="preview " title="Image Title Here" href="assets/img/portfolio/b.jpg"><i class="fa fa-search-plus fa-5x"></i></a>
+                            <a class="preview " title="Guinea Case Predictions" href="assets/img/Guinea.png"><i class="fa fa-search-plus fa-5x"></i></a>
 
                         </div>
                     </div>
@@ -184,7 +184,7 @@
                     <div class="portfolio-item wow rotateIn animated" data-wow-delay="0.6s">
 
 
-                        <img src="assets/img/portfolio/c.png" class="img-responsive " alt="" />
+                        <img src="assets/img/Sierra Leone.png" class="img-responsive " alt="" />
                         <div class="overlay">
                           <p>
                                 <span>
@@ -193,7 +193,7 @@
 
                                 PROJECT TITLE HERE
                             </p>
-                            <a class="preview " title="Image Title Here" href="assets/img/portfolio/c.png"><i class="fa fa-search-plus fa-5x"></i></a>
+                            <a class="preview " title="Sierra Leone Case Predictions" href="assets/img/Sierra Leone.png"><i class="fa fa-search-plus fa-5x"></i></a>
 
                         </div>
                     </div>
