added text to the predictions

--- a/light/index.html
+++ b/light/index.html
@@ -201,62 +201,28 @@
 
             </div>
 
-            <div class="row " style="padding-top: 50px;">
+            <div class="row " style="padding-top: 30px;">
                 <div class="col-lg-4 col-md-4 col-sm-4 ">
 
                     <div class="portfolio-item wow rotateIn animated" data-wow-delay="0.7s">
 
+                      According to predictions based on the SIR model of disease spreading, Guinea will have an increasing number of weekly cases for the first 18 months after the outbreak. Following this threshold weekly cases will begin decreasing.
 
-                        <img src="assets/img/portfolio/d.jpg" class="img-responsive " alt="" />
-                        <div class="overlay">
-                           <p>
-                                <span>
-                                Image Orinagal Size: 750x500
-                                </span>
-
-                                PROJECT TITLE HERE
-                            </p>
-                            <a class="preview  " title="Image Title Here" href="assets/img/portfolio/d.jpg"><i class="fa fa-search-plus fa-5x"></i></a>
-
-                        </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 ">
 
-                    <div class="portfolio-item wow rotateIn animated" data-wow-delay="0.8s">
+                    <div class="portfolio-item wow rotateIn animated" data-wow-delay="0.7s">
 
-
-                        <img src="assets/img/portfolio/e.jpg" class="img-responsive " alt="" />
-                        <div class="overlay">
-                            <p>
-                                <span>
-                                Image Orinagal Size: 750x500
-                                </span>
-
-                                PROJECT TITLE HERE
-                            </p>
-                            <a class="preview " title="Image Title Here" href="assets/img/portfolio/e.jpg"><i class="fa fa-search-plus fa-5x"></i></a>
-
+                      According to predictions based on the SIR model of disease spreading, Liberia will have an increasing number of weekly cases for the first 11 months after the outbreak. Following this threshold weekly cases will begin decreasing.
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 ">
+                <div class="col-lg-04 col-md-4 col-sm-4 ">
 
-                    <div class="portfolio-item wow rotateIn animated" data-wow-delay="0.9s">
+                    <div class="portfolio-item wow rotateIn animated" data-wow-delay="0.7s">
 
-
-                        <img src="assets/img/portfolio/h.jpg" class="img-responsive " alt="" />
-                        <div class="overlay">
-                          <p>
-                                <span>
-                                Image Orinagal Size: 750x500
-                                </span>
-
-                                PROJECT TITLE HERE
-                            </p>
-                            <a class="preview " title="Image Title Here" href="assets/img/portfolio/h.jpg"><i class="fa fa-search-plus fa-5x"></i></a>
-
-                        </div>
+                      According to predictions based on the SIR model of disease spreading, Sierra Leone will have an increasing number of weekly cases for the first 16 months after the outbreak. Following this threshold weekly cases will begin decreasing.
                     </div>
                 </div>
 
