added text underneath the images in the predictions section and took out the image preview

--- a/light/index.html
+++ b/light/index.html
@@ -102,7 +102,6 @@
                         <span>
                           <i class="fa fa-quote-left" ></i>Women make up an estimated 75% of all cases <i class="fa fa-quote-right" ></i>
                         </span>
-
                         <span >
                           <i class="fa fa-quote-left" ></i>Children are particularly vulnerable to Ebola <i class="fa fa-quote-right" ></i>
                         </span>
@@ -145,89 +144,25 @@
 
                     <div class="portfolio-item wow rotateIn animated" data-wow-delay="0.4s">
 
-
-                        <img src="assets/img/Liberia.png" class="img-responsive " alt="" />
-                        <div class="overlay">
-                            <p>
-                                <span>
-                                Image Orinagal Size: 750x500
-                                </span>
-
-                                PROJECT TITLE HERE
-                            </p>
-                            <a class="preview  " title="Liberia Case Predictions" href="assets/img/Liberia.png"><i class="fa fa-search-plus fa-5x"></i></a>
-
-                        </div>
+                        <img src="assets/img/Liberia.png" class="img-responsive " alt="" />According to predictions based on the SIR model of disease spreading, Guinea will have an increasing number of weekly cases for the first 18 months after the outbreak. Following this threshold weekly cases will begin decreasing.
+                      </img>
                     </div>
                 </div>
+
                 <div class="col-lg-4 col-md-4 col-sm-4 ">
 
                     <div class="portfolio-item wow rotateIn animated" data-wow-delay="0.5s">
-
-
-                        <img src="assets/img/Guinea.png" class="img-responsive " alt="" />
-                        <div class="overlay">
-                            <p>
-                                <span>
-                                Image Orinagal Size: 750x500
-                                </span>
-
-                                PROJECT TITLE HERE
-                            </p>
-                            <a class="preview " title="Guinea Case Predictions" href="assets/img/Guinea.png"><i class="fa fa-search-plus fa-5x"></i></a>
-
-                        </div>
+                    <img src="assets/img/Guinea.png" class="img-responsive " alt="" /> According to predictions based on the SIR model of disease spreading, Guinea will have an increasing number of weekly cases for the first 18 months after the outbreak. Following this threshold weekly cases will begin decreasing.</img>
                     </div>
                 </div>
+
                 <div class="col-lg-4 col-md-4 col-sm-4 ">
 
                     <div class="portfolio-item wow rotateIn animated" data-wow-delay="0.6s">
-
-
-                        <img src="assets/img/Sierra Leone.png" class="img-responsive " alt="" />
-                        <div class="overlay">
-                          <p>
-                                <span>
-                                Image Orinagal Size: 750x500
-                                </span>
-
-                                PROJECT TITLE HERE
-                            </p>
-                            <a class="preview " title="Sierra Leone Case Predictions" href="assets/img/Sierra Leone.png"><i class="fa fa-search-plus fa-5x"></i></a>
-
-                        </div>
+                    <img src="assets/img/Sierra Leone.png" class="img-responsive " alt="" /> According to predictions based on the SIR model of disease spreading, Sierra Leone will have an increasing number of weekly cases for the first 16 months after the outbreak. Following this threshold weekly cases will begin decreasing.</img>
                     </div>
                 </div>
-
             </div>
-
-            <div class="row " style="padding-top: 30px;">
-                <div class="col-lg-4 col-md-4 col-sm-4 ">
-
-                    <div class="portfolio-item wow rotateIn animated" data-wow-delay="0.7s">
-
-                      According to predictions based on the SIR model of disease spreading, Guinea will have an increasing number of weekly cases for the first 18 months after the outbreak. Following this threshold weekly cases will begin decreasing.
-
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 ">
-
-                    <div class="portfolio-item wow rotateIn animated" data-wow-delay="0.7s">
-
-                      According to predictions based on the SIR model of disease spreading, Liberia will have an increasing number of weekly cases for the first 11 months after the outbreak. Following this threshold weekly cases will begin decreasing.
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-04 col-md-4 col-sm-4 ">
-
-                    <div class="portfolio-item wow rotateIn animated" data-wow-delay="0.7s">
-
-                      According to predictions based on the SIR model of disease spreading, Sierra Leone will have an increasing number of weekly cases for the first 16 months after the outbreak. Following this threshold weekly cases will begin decreasing.
-                    </div>
-                </div>
-
-            </div>
-
         </div>
     </div>
     <!--./ PREDICTIONS/PORTFOLIO SECTION END -->
