added another section between maps and predictions to give it a nice break.

--- a/light/index.html
+++ b/light/index.html
@@ -125,7 +125,7 @@
     <!--./ HOME SECTION END -->
     <div id="map" >
         <div class="container">
-            <div class="row text-center">
+            <div class="row text-center" style="padding-bottom:50px";>
                     <h2  data-wow-delay="0.3s" class="wow rollIn animated" ><strong>MAP </strong></h2>
                     <p class="sub-head">This interactive map depicts Ebola virus cases since the year 2000 on the African continent. </p>
                     <iframe align="center" width="960" height="680" src="/light/assets/frame/interactivemap.html" allowfullscreen="allowfullscreen" frameborder="0" scrolling="no"></iframe>
@@ -133,6 +133,54 @@
         </div>
     </div>
     <!--./ MAP SECTION END -->
+
+    <div class="donars-section">
+      <div class="overlay">
+        <div class="container">
+          <div class="row ">
+            <div class="col-lg-12 col-md-12 ">
+              <div id="testimonials" class="carousel slide" data-ride="carousel">
+
+                <ol class="carousel-indicators">
+                  <li data-target="#testimonials" data-slide-to="0" class=""></li>
+                  <li data-target="#testimonials" data-slide-to="1" class=""></li>
+                  <li data-target="#testimonials" data-slide-to="2" class="active"></li>
+                </ol>
+
+                <div class="carousel-inner">
+                  <div class="item">
+                    <div class="container center">
+                      <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 slide-custom">
+                        <h4><i class="fa fa-quote-left"></i>The app gives travelers basic information about the disease, such as its definition, the risk of exposure, prevention methods, signs and symptoms, transmission, diagnosis and treatment.<i class="fa fa-quote-right"></i></h4>
+                        <h5 class="pull-right"><strong class="c-black">Travel Pulse</strong></h5>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="item">
+                    <div class="container center">
+                      <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 slide-custom">
+                        <h4><i class="fa fa-quote-left"></i>Bosanac razvio aplikaciju za pomoć u borbi protiv ebole<i class="fa fa-quote-right"></i></h4>
+                        <h5 class="pull-right"><strong class="c-black">Al Jazeera</strong></h5>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="item active">
+                    <div class="container center">
+                      <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 slide-custom">
+                        <h4><i class="fa fa-quote-left"></i>A Western Kentucky University student has developed a way to track the Ebola virus outbreak.<i class="fa fa-quote-right"></i></h4>
+                        <h5 class="pull-right"><strong class="c-black">Washington Times</strong></h5>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--./ Testimonials Section End -->
+
     <div id="predictions" class="pad-top-botm" >
         <div class="container">
             <div class="row text-center">
@@ -146,7 +194,7 @@
 
                     <div class="portfolio-item wow rotateIn animated" data-wow-delay="0.4s">
 
-                        <img src="assets/img/Liberia.png" class="img-responsive " alt="" />According to predictions based on the SIR model of disease spreading, Guinea will have an increasing number of weekly cases for the first 18 months after the outbreak. Following this threshold weekly cases will begin decreasing.
+                        <img src="assets/img/Liberia.png" class="img-responsive " alt="" />According to predictions based on the SIR model of disease spreading, Liberia will have an increasing number of weekly cases for the first 11 months after the outbreak. Following this threshold weekly cases will begin decreasing.
                       </img>
                     </div>
                 </div>
@@ -168,6 +216,7 @@
         </div>
     </div>
     <!--./ PREDICTIONS/PORTFOLIO SECTION END -->
+
     <div id="help" >
         <div class="overlay">
             <div class="container">
@@ -202,7 +251,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12">
-                 &copy; 2014 yourdomian.com | by <a href="http://www.binarytheme.com/" style="color:#fff;" target="_blank" >binarytheme.com</a>
+                 &copy; The Ebola Project | by <a href="http://www.binarytheme.com/" style="color:#fff;" target="_blank" >Smailhodzic A. & Smith J.</a>
                 </div>
             </div>
 
