--- a/light/index.html
+++ b/light/index.html
@@ -37,7 +37,7 @@
     <!--/. PRELOADER END -->
     <div class="navbar navbar-default navbar-fixed-top move-me ">
         <div class="container">
-            <div class="navbar-header">
+            <div class="navbar-header" style="padding-top:5px" style="padding-bottom:10px">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -45,7 +45,7 @@
                 </button>
 
                 <a class="navbar-brand" href="#">
-                    <img src="assets/img/logo.png" class="navbar-brand-logo " alt="" />
+                  <p style="color:#ff0000">The Ebola Project</p>
 
                 </a>
             </div>
@@ -225,7 +225,7 @@
                       </i>Visit the following website to see how you can help in the fight against Ebola. </p>
                         <p>
                         <p>
-                        <a href="http://www.ussltaskforce.org/">US-SL Ebola Health Care Task Force Coalition</a>
+                        <a href="http://www.ussltaskforce.org/" target="_blank">Visit US-SL Ebola Health Care Task Force Coalition</a>
                     </div>
                 </div>
             </div>
