changed the testimonials section around

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                   <div class="item">
                     <div class="container center">
                       <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 slide-custom">
-                        <h4><i class="fa fa-quote-left"></i>The app gives travelers basic information about the disease, such as its definition, the risk of exposure, prevention methods, signs and symptoms, transmission, diagnosis and treatment.<i class="fa fa-quote-right"></i></h4>
+                        <h4><i class="fa fa-quote-left"></i>The Ebola Project, 1 of the 5 Travel Apps You Must Own<i class="fa fa-quote-right"></i></h4>
                         <h5 class="pull-right"><strong class="c-black">Travel Pulse</strong></h5>
                       </div>
                     </div>
@@ -167,7 +167,7 @@
                   <div class="item active">
                     <div class="container center">
                       <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 slide-custom">
-                        <h4><i class="fa fa-quote-left"></i>A Western Kentucky University student has developed a way to track the Ebola virus outbreak.<i class="fa fa-quote-right"></i></h4>
+                        <h4><i class="fa fa-quote-left"></i>A Western Kentucky University student has developed a way to track the Ebola virus outbreak<i class="fa fa-quote-right"></i></h4>
                         <h5 class="pull-right"><strong class="c-black">Washington Times</strong></h5>
                       </div>
                     </div>
@@ -193,7 +193,7 @@
                       <img src="assets/img/Liberia.png" class="img-responsive" alt="" />According to predictions based on the SIR model of disease spreading, Liberia will have an increasing number of weekly cases for the first 11 months after the outbreak. Following this threshold weekly cases will begin decreasing.
                       </img>
                     </div>
-                    
+
                     <div class="col-lg-4 col-md-4 col-sm-4 ">
                     <img src="assets/img/Guinea.png" class="img-responsive" alt="" /> According to predictions based on the SIR model of disease spreading, Guinea will have an increasing number of weekly cases for the first 18 months after the outbreak. Following this threshold weekly cases will begin decreasing.</img>
                     </div>
