--- a/index.html
+++ b/index.html
@@ -138,8 +138,7 @@
       <div class="overlay">
         <div class="container">
           <div class="row ">
-            <div class="col-lg-12 col-md-12 ">
-              <div id="testimonials" class="carousel slide" data-ride="carousel">
+              <div id="testimonials" class="carousel slide" data-ride="carousel" align="center">
 
                 <ol class="carousel-indicators">
                   <li data-target="#testimonials" data-slide-to="0" class=""></li>
@@ -150,7 +149,7 @@
                 <div class="carousel-inner">
                   <div class="item">
                     <div class="container center">
-                      <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 slide-custom">
+                      <div class="slide-custom">
                         <h4><i class="fa fa-quote-left"></i>The Ebola Project, 1 of the 5 Travel Apps You Must Own<i class="fa fa-quote-right"></i></h4>
                         <h5 class="pull-right"><strong class="c-black">Travel Pulse</strong></h5>
                       </div>
@@ -158,7 +157,7 @@
                   </div>
                   <div class="item">
                     <div class="container center">
-                      <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 slide-custom">
+                      <div class="slide-custom">
                         <h4><i class="fa fa-quote-left"></i>Bosanac razvio aplikaciju za pomoć u borbi protiv ebole<i class="fa fa-quote-right"></i></h4>
                         <h5 class="pull-right"><strong class="c-black">Al Jazeera</strong></h5>
                       </div>
@@ -166,7 +165,7 @@
                   </div>
                   <div class="item active">
                     <div class="container center">
-                      <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 slide-custom">
+                      <div class="slide-custom">
                         <h4><i class="fa fa-quote-left"></i>A Western Kentucky University student has developed a way to track the Ebola virus outbreak<i class="fa fa-quote-right"></i></h4>
                         <h5 class="pull-right"><strong class="c-black">Washington Times</strong></h5>
                       </div>
@@ -181,7 +180,7 @@
     </div>
     <!--./ Testimonials Section End -->
 
-    <div id="predictions" class="pad-top-botm" >
+    <div id="predictions" class="pad-top-botm" align="center" >
         <div class="container">
             <div class="row text-center">
                     <h2 data-wow-delay="0s" class="wow rollIn animated"><strong>PREDICTIONS </strong></h2>
